@@ -182,7 +182,7 @@ module Forwardable
         begin
           #{accessor}.__send__(:#{method}, *args, &block)
         rescue ::Exception
-          $@.delete_if{|s| Forwardable::FILE_REGEXP =~ s} unless Forwardable::debug
+          $@.delete_if{|s| ::Forwardable::FILE_REGEXP =~ s} unless ::Forwardable::debug
           ::Kernel::raise
         end
       end
@@ -274,7 +274,7 @@ module SingleForwardable
         begin
           #{accessor}.__send__(:#{method}, *args, &block)
         rescue ::Exception
-          $@.delete_if{|s| Forwardable::FILE_REGEXP =~ s} unless Forwardable::debug
+          $@.delete_if{|s| ::Forwardable::FILE_REGEXP =~ s} unless ::Forwardable::debug
           ::Kernel::raise
         end
       end
