@@ -1,3 +1,10 @@
+Sat Oct 24 07:29:12 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* lib/forwardable.rb (def_instance_delegator, def_single_delegator):
+	  match backtraces against ::Forwardable in case the target class
+	  is a subclass of BasicObject and does not include Kernel.
+	  [ruby-core:71176] [Bug #11616]
+
 Sat Oct 24 04:10:13 2015  Koichi Sasada  <ko1@atdot.net>
 
 	* iseq.c (make_compile_option_value): include frozen_string_literal*
